# ozon_scrapy

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
ozon_scrapy/: items.py  main.py  middlewares.py  pipelines.py  pyproject.toml  scrapy.cfg  settings.py
ozon_scrapy/config/: __init__.py  config.py
ozon_scrapy/entrypoints/: main.py
ozon_scrapy/ozon_scrapy/: items.py  settings.py
ozon_scrapy/ozon_scrapy/spiders/: __init__.py  crawl_spider.py
ozon_scrapy/spiders/: __init__.py  crawl_spider.py
