[tool.poetry]
name = "ozon-scrapy"
version = "0.1.0"
description = ""
authors = ["aleksey.matveev <aleksey.matveev@alarislabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
